# rust-crash-course

my_projects/hello_rust/examples/: hello.rs
my_projects/spider_demo/: Cargo.toml
my_projects/spider_demo/examples/: jd-jx.rs  jd_jx_extractor.rs
my_projects/spider_demo/src/: main.rs
topics/array/exercises/src/: lib.rs
topics/array/solutions/examples/: array.rs
topics/async_await/exercises/examples/: async_await.rs  join_select.rs  thread.rs
topics/enum_type/exercises/examples/: enum_x.rs
topics/error/exercises/src/: lib.rs
topics/for_loop/exercises/src/: lib.rs
topics/function/exercises/src/: lib.rs
topics/function/exercises/tests/: test.rs
topics/generic_type/exercises/src/: lib.rs
topics/hash_map/solutions/examples/: hash_map.rs
topics/hello/exercises/src/: main.rs
topics/if_else/exercises/src/: lib.rs
topics/iterator_adaptors/exercises/src/: lib.rs
topics/join_select/exercises/src/: main.rs
topics/merkle/exercises/src/: main.rs
topics/merkle/solutions/src/: main.rs
topics/method/exercises/src/: lib.rs
topics/modules/exercises/src/: lib.rs  math.rs
topics/ownership/exercises/examples/: own_t.rs
topics/ownership/exercises/src/: lib.rs
topics/pattern_match/exercises/src/: lib.rs
topics/question/exercises/src/: lib.rs
topics/scalar/exercises/src/: lib.rs
topics/scalar/solutions/examples/: scalar.rs
topics/string/exercises/examples/: str_s.rs
topics/struct_type/exercises/src/: lib.rs
topics/trait_bound/exercises/src/: lib.rs
topics/tuple/exercises/src/: lib.rs
topics/tuple/solutions/examples/: tuple.rs
(+5 files in other folders)
